# schedule_of_training

./: .gitignore  pyproject.toml  work.py
app/: __main__.py  init_db.txt  temp.py
app/database/: connection.py
app/database/models/: base.py  logs.py  roles.py  schedules.py  sport.py  user.py
app/database/repository/: base.py  logs.py  roles.py  schedules.py  sports.py  users.py
app/schemes/: callback_data.py  detailedschedule.py  participated.py
app/services/: core.py  user_flow_admin.py  user_flow_coach.py  user_flow_sportsman.py
app/settings/: __init__.py  base.py
app/telegram/: tg_functional.py  tgconnection.py
app/telegram_bot/: aio_bot.py  settings.py
app/telegram_bot/actions/: back_to_menu.py  create_schedule.py  delete_schedule.py  edit_schedule.py  edit_user_role.py  join_to_training.py  show_allowed_schedules.py  show_my_schedules.py  start.py  start_over.py
app/telegram_bot/states/: __init__.py  base.py  choose_date.py  choose_sport.py  choose_user_role.py  create_schedule.py  delete_schedule.py  edit_schedule.py  edit_user_role.py  join_to_training.py  refuse_to_train.py  show_actions_with_schedules.py  show_all_users.py  show_allowed_times.py  show_my_schedules.py  show_participants.py  show_schedules.py  start.py
app/user_flow_storage/: __init__.py
app/utils/: keyboard.py
tests/: conftest.py
tests/test_db/: base.py  test_sports.py  test_users.py
