[tool.poetry]
name = "schedule-of-training"
version = "0.1.0"
description = ""
authors = ["HRAON88 <irm7700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.2"
telebot = "^0.0.5"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
python-telegram-bot = "^21.4"
black = "^24.8.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test_*"
testpaths = "tests/"

[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120
lines_after_imports = 2